--- a/AE3Angular/src/app/app.component.html
+++ b/AE3Angular/src/app/app.component.html
@@ -2,7 +2,11 @@
 
 <app-cabecera></app-cabecera>
 
-<!--aquí tendría que crear un condicional donde le diga que si usuario y password es correcto, entonces mostrar app-main-->
-<app-main></app-main>
+
+<router-outlet></router-outlet>
+
+
+
+
 
 <app-footer></app-footer>
