--- a/AE3Angular/src/app/cabecera/cabecera.component.html
+++ b/AE3Angular/src/app/cabecera/cabecera.component.html
@@ -1,17 +1,20 @@
+<!-- en la cabecera, crearemos el menú de navegación el cual incluirá las rutas hacia las páginas que necesitemos abrir
+e incluido un botón de iniciar sesión-->
+
 <div class="cabecera">
 
     <ul>
         <li><a href="#"> <h3>LOGO</h3></a></li>
-        <li><a href="#">
+        <li><a routerLink="/contacto">
           <div class="input-group">
             <input required="" type="text" name="text" autocomplete="off" class="input">
             <label class="user-label">¿Te puedo ayudar?</label>
           </div>
         </a></li>
-        <li><a href="#"> <h3>Videojuegos</h3> </a></li> <!--Aquí habrá que linkar las otras weebs-->
-        <li><a href="#"> <h3>Contacto</h3> </a></li> <!--Aquí habrá que linkar las otras weebs-->
-        <li><a href="#"> <h3>Nosotros</h3> </a></li> <!--Aquí habrá que linkar las otras weebs--> 
-        <li><a href="#"> <button> Iniciar sesión </button></a></li> <!--Aquí habrá que linkar las otras weebs-->
+        <li><a routerLink="/videojuegos"> <h3>Videojuegos</h3> </a></li> 
+        <li><a routerLink="/contacto"> <h3>Contacto</h3> </a></li> 
+        <li><a routerLink="/nosotros" class="button"> <h3>Nosotros</h3> </a></li> 
+        <li><a href="#"> <button> Iniciar sesión </button></a></li> 
       </ul>
 
 </div>
