--- a/AE3Angular/src/app/login/login.component.html
+++ b/AE3Angular/src/app/login/login.component.html
@@ -1,1 +1,20 @@
-<p>login works!</p>
+
+<div class="login">
+    <div class="card">
+        <h4 class="title">Iniciar Sesión</h4>
+        <form>
+
+          <div class="field">
+            <input id="logemail" placeholder="Usuario (Introducir JavierCalzadoLp)" class="input-field" name="logemail" type="email">
+          </div>
+
+          <div class="field">
+            <input id="logpass" placeholder="Password (introducir: 1234)" class="input-field" name="logpass" type="password">
+          </div>
+
+          <button routerLink="/videojuegos" class="btn" type="submit">Login</button>
+          <a href="#" class="btn-link">¿Has olvidado la contraseña?</a>
+        </form>
+      </div>
+
+</div>
