--- a/AE3Angular/src/app/main/main.component.html
+++ b/AE3Angular/src/app/main/main.component.html
@@ -1,8 +1,8 @@
 <div>
-    <app-usuario></app-usuario>
-    <app-videojuegos></app-videojuegos>
-
-    <!-- PROVISIONALMENTE-->
-    <app-contacto></app-contacto>
-    <app-nosotros></app-nosotros>
+    <!-- 
+        En un primer momento, el componente MAIN había sido creado
+        para ordenar toda la información aquí, pero después de hacer el enrutamiento,
+        ha sido más sencillo no hacerlo así.
+    
+    -->
 </div>
