--- a/AE3Angular/src/app/contacto/contacto.component.css
+++ b/AE3Angular/src/app/contacto/contacto.component.css
@@ -3,6 +3,8 @@
     display: flex;
     text-align: left;
     justify-content: center;
+    margin-left: 40px;
+    margin-top: 30px;
 }
 
 .card {
@@ -59,7 +61,7 @@
     padding-bottom: 4px;
   }
   
-  button {
+  .button {
     background-color: #282866;
     margin-top: 10px;
     font-size: 14px;
@@ -69,11 +71,70 @@
     color: white;
   }
   
-  button:hover {
+  .button:hover {
     background-color: #5f5f9c;
   }
 
   .btn{
-    margin-left: 50%;
+    margin-left: 47%;
     margin-top: 40px;
+    
+    margin-bottom: 20px;
 }
+
+
+/*OTRO BOTON*/
+button {
+  font-family: inherit;
+  font-size: 20px;
+  background: #282866;
+  color: white;
+  padding: 0.7em 1em;
+  padding-left: 0.9em;
+  display: flex;
+  align-items: center;
+  border: none;
+  border-radius: 16px;
+  overflow: hidden;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+
+button span {
+  display: block;
+  margin-left: 0.3em;
+  transition: all 0.3s ease-in-out;
+}
+
+button svg {
+  display: block;
+  transform-origin: center center;
+  transition: transform 0.3s ease-in-out;
+}
+
+button:hover .svg-wrapper {
+  animation: fly-1 0.6s ease-in-out infinite alternate;
+}
+
+button:hover svg {
+  transform: translateX(1.2em) rotate(45deg) scale(1.1);
+}
+
+button:hover span {
+  transform: translateX(5em);
+}
+
+button:active {
+  transform: scale(0.95);
+}
+
+@keyframes fly-1 {
+  from {
+    transform: translateY(0.1em);
+  }
+
+  to {
+    transform: translateY(-0.1em);
+  }
+}
+
