--- a/AE3Angular/src/app/contacto/contacto.component.html
+++ b/AE3Angular/src/app/contacto/contacto.component.html
@@ -1,6 +1,6 @@
-<!-- aqui quiza sería aconsejable poner tambien la app-cabecera y la app-footer , ya lo veremos..-->
-
-
+<!-- de esta forma invocamos al componente usuario, para que sea mostrado cuando llamemos al componente videojuegos
+este componente tendrá el usuario y su password-->
+<app-usuario></app-usuario>
 <div class="contacta">
 
 
@@ -27,7 +27,7 @@
             </textarea>
         </div>
         <div class="field">
-            <button class="button">Enviar</button>
+            <button type="submit" class="button">Enviar</button>
         </div>
     </form>
 
@@ -35,6 +35,18 @@
 
 </div>
 <div class="btn">
-    <button>Volver</button>
+    
+
+    <button routerLink="/videojuegos">
+        <div class="svg-wrapper-1">
+          <div class="svg-wrapper">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+              <path fill="none" d="M0 0h24v24H0z"></path>
+              <path fill="currentColor" d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z"></path>
+            </svg>
+          </div>
+        </div>
+        <span>Volver</span>
+      </button>
 
 </div>
