--- a/AE3Angular/src/app/nosotros/nosotros.component.html
+++ b/AE3Angular/src/app/nosotros/nosotros.component.html
@@ -1,5 +1,6 @@
-
-
+<!-- de esta forma invocamos al componente usuario, para que sea mostrado cuando llamemos al componente videojuegos
+este componente tendrá el usuario y su password-->
+<app-usuario></app-usuario>
 <div class="nosotros">
 
     <h1>Sobre Nosotros</h1>
@@ -64,8 +65,19 @@
     <img src="./assets/fifa.svg" width="50%" height="50%">
 
     <div class="btn">
-        <button>Volver</button>
-
+    
+        <button routerLink="/videojuegos">
+            <div class="svg-wrapper-1">
+              <div class="svg-wrapper">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                  <path fill="none" d="M0 0h24v24H0z"></path>
+                  <path fill="currentColor" d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z"></path>
+                </svg>
+              </div>
+            </div>
+            <span>Volver</span>
+          </button>
+    
     </div>
     
     
